--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,15 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>EventNoire</title>
-    <script src="<script src="https://kit.fontawesome.com/21b41f5593.js" crossorigin="anonymous"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React Template</title>
+    <title>Simple React App</title>
+    <script src="https://kit.fontawesome.com/{kit_id}.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
